<resources>
    <string name="app_name">Prontuario</string>

    <!-- Shared Preferences Keys -->
    <string name="pref_key">prontuario_beta_shared_key</string>
    <string name="user_type">user_type</string>
    <string name="user_id">user_id</string>
    <string name="user_id_type">user_id_type</string>

    <!-- Facebook -->

    <string name="facebook_app_id">603964403308123</string>
    <string name="fb_login_protocol_scheme">fb603964403308123</string>

    <!-- LoginActivity -->
    <string name="login_button_text">login</string>
    <string name="username_hint_text">Usuário</string>
    <string name="invalid_login_message">Usuário ou senha inválida</string>
    <string name="empty_login_fields_message">Necessário preencher os campos login e senha</string>

    <!-- MedSignupActivity -->
    <string name="med_signup_cpf_hint_text">CPF</string>
    <string name="med_signup_name_hint_text">Nome</string>
    <string name="med_signup_crm_hint_text">CRM</string>
    <string name="med_signup_email_hint_text">E-mail</string>
    <string name="med_signup_phone_hint_text">Telefone</string>
    <string name="med_signup_birthdate_hint_text">Data de Nascimento</string>
    <string name="med_signup_password_hint_text">Senha</string>
    <string name="med_signup_confirm_password_hint_text">Confirmar senha</string>
    <string name="med_signup_gender_hint_text">Sexo</string>
    <string name="med_signup_specialty_hint_text">Especialidade</string>
    <string name="med_signup_gender_female_text">Feminino</string>
    <string name="med_signup_gender_male_text">Masculino</string>

    <!-- Button labels -->
    <string name="next_button_text">continuar</string>
    <string name="sign_up_button_text">cadastro de médico</string>
    <string name="finish_sign_up_button_text">finalizar cadastro</string>

    <!-- Error messages -->
    <string name="error_empty_fields">Preencha todos os campos</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_cpf">CPF inválido</string>
    <string name="error_confirm_password">Confirme sua senha corretamente</string>
    <string name="error_invalid_date">Data inválida</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- RegisterIdentificationActivity -->
    <string name="register">Cadastro de paciente</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>

    <!-- Commons -->
    <string name="complete_name">Nome completo</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="password">Senha</string>
    <string name="cpf">CPF</string>
    <string name="email">Email</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="gender">Sexo</string>
    <string name="next">Próximo</string>
    <string name="back">Voltar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_current_place">Map Current Place</string>
</resources>
