<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_2"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.tcc.prontuario.prontuario.RegisterIdentificationStep2Activity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="71dp">

        <EditText
            android:id="@+id/register_identification_birth_date"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/edit_text_default_marginTop"
            android:background="@color/input_text_login_default"
            android:gravity="center"
            android:hint="@string/birth_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_identification_birth_date">

            <RadioButton
                android:id="@+id/register_identification_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/register_identification_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <Button
                android:id="@+id/register_back_button_step2"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="15dp"/>

            <Button
                android:id="@+id/register_next_button_step2"
                android:layout_width="@dimen/button_default_width"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
