<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tcc.prontuario.prontuario.MedSignupPersonalDataActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_2"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/med_signup_birthdate_text"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="116dp"
            android:gravity="center"
            android:inputType="date"
            android:hint="@string/med_signup_birthdate_hint_text"
            android:maxLength="10"
            android:background="@color/input_text_login_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/med_signup_gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/med_signup_birthdate_text" >

            <RadioButton
                android:id="@+id/med_signup_gender_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/med_signup_gender_female_text" />

            <RadioButton
                android:id="@+id/med_signup_gender_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/med_signup_gender_male_text" />

        </RadioGroup>

        <Button
            android:id="@+id/personal_data_next_button"
            android:layout_width="@dimen/button_default_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/primary_button"
            android:text="@string/next_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>