<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_2"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.tcc.prontuario.prontuario.RegisterIdentificationActivity">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/edit_text_default_marginTop"
            android:hint="@string/complete_name"
            android:background="@color/input_text_login_default"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:background="@color/input_text_login_default"
            android:gravity="center"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_name" />

        <EditText
            android:id="@+id/register_cpf"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/cpf"
            android:background="@color/input_text_login_default"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />

        <Button
            android:id="@+id/register_button_step1"
            android:layout_width="@dimen/button_default_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/next_button_text"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/primary_button"
            android:textColor="@color/white"/>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
