<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_2"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.tcc.prontuario.prontuario.RegisterIdentificationStep3Activity">

        <EditText
            android:id="@+id/register_identification_password"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/edit_text_default_marginTop"
            android:background="@color/input_text_login_default"
            android:gravity="center"
            android:hint="@string/password"
            android:textAllCaps="true"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_identification_confirm_password"
            android:layout_width="@dimen/edit_text_default_width"
            android:layout_height="@dimen/edit_text_default_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/input_text_login_default"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_identification_password" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/register_back_button_step3"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@drawable/primary_button"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/register_next_button_step3"
                android:layout_width="@dimen/button_default_small_width"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button"
                android:text="@string/finish_sign_up_button_text"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
