<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tcc.prontuario.prontuario.MedSignupIdentification">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_2"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/med_signup_cpf_text"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="116dp"
            android:hint="@string/med_signup_cpf_hint_text"
            android:inputType="number"
            android:maxLength="11"
            android:gravity="center"
            android:background="@color/input_text_login_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/med_signup_name_text"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:hint="@string/med_signup_name_hint_text"
            android:maxLength="50"
            android:gravity="center"
            android:background="@color/input_text_login_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_signup_cpf_text" />

        <EditText
            android:id="@+id/med_signup_crm_text"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/med_signup_crm_hint_text"
            android:background="@color/input_text_login_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/med_signup_name_text"/>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>